# Software-Design

./: README.md
Big math calculator with gui/: CMakeCache.txt  CMakeLists.txt  Interpreter.cpp  Interpreter.h  VTmath.cpp  VTmath.h  output_window.cpp  output_window.h  run_vtmath  run_vtmath.cpp  test_vtmath  test_vtmath.cpp  test_vtqulator  test_vtqulator.cpp  vtqulator  vtqulator_gui.cpp  vtqulator_gui.h  vtqulator_main.cpp
Commandline calculator/: CMakeCache.txt  CMakeLists.txt  Interpreter(For submission).cpp  Interpreter.cpp  Interpreter.h  Project 2 tips.txt  integration_test.py  test.txt  testing.cpp  unit_test  unit_test.cpp  vtcalc  vtcalc.cpp
Commandline calculator with gui/: CMakeCache.txt  CMakeLists.txt  Interpreter.cpp  Interpreter.h  output_window.cpp  output_window.h  test_vtqulator  test_vtqulator.cpp  vtqulator  vtqulator_gui.cpp  vtqulator_gui.h
Quote generator/: CMakeLists.txt  Vagrantfile  genquote.cpp  genquote_original.cpp
exercise02-jrsavage29/: hello.cpp  readme.md
exercise03-jrsavage29/: hello.cpp  readme.md
exercise04-jrsavage29/: MyVector.cpp  MyVector.h  README.md  Vagrantfile  test_myvector.cpp
exercise04-jrsavage29/Starter code/: MyVector.cpp  MyVector.h
exercise05-jrsavage29/: mobydick.txt  readme.md  wordcount.cpp
exercise06-jrsavage29/Debug/test_mul.539C95E5.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  test_multimap.cpp.lastbuildstate
exercise07-jrsavage29/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Exercise7.sln  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  compress.cpp  compress.vcxproj  compress.vcxproj.filters  test_treap.cpp  test_treap.vcxproj  test_treap.vcxproj.filters  treap_bst.h  treap_bst.txx
exercise07-jrsavage29/Debug/: compress.ilk
exercise07-jrsavage29/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
exercise07-jrsavage29/compress.dir/Debug/compress.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
exercise07-jrsavage29/test_treap.dir/Debug/test_treap.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  test_treap.lastbuildstate
exercise09-jrsavage29/: CMakeCache.txt  CMakeLists.txt  Makefile  buttons.cpp  buttons.h  poly  poly.cpp
exercise09-jrsavage29/poly_autogen/: mocs_compilation.cpp
exercise09-jrsavage29/poly_autogen/EWIEGA46WW/: moc_buttons.cpp
exercise10-jrsavage29/: CMakeCache.txt  CMakeLists.txt  Makefile  complex_widget.cpp  complex_widget.hpp  ex10  main.cpp
exercise10-jrsavage29/ex10_autogen/: mocs_compilation.cpp
exercise10-jrsavage29/ex10_autogen/EWIEGA46WW/: moc_complex_widget.cpp
exercise11-jrsavage29/: CMakeCache.txt  CMakeLists.txt  Makefile  main.cpp  widget_events  widget_events.cpp  widget_events.hpp
exercise11-jrsavage29/Lecture12-code/: CMakeLists.txt  callback_example.cpp  callback_library.cpp  callback_library.h  polymorphic_example.cpp  polymorphic_library.cpp  polymorphic_library.h
exercise11-jrsavage29/widget_events_autogen/: mocs_compilation.cpp
exercise11-jrsavage29/widget_events_autogen/EWIEGA46WW/: moc_widget_events.cpp
exercise12-jrsavage29/: CMakeCache.txt  CMakeLists.txt  Makefile  main.cpp  traffic_light.cpp  traffic_light.h  trafficlight
exercise12-jrsavage29/trafficlight_autogen/: mocs_compilation.cpp
exercise12-jrsavage29/trafficlight_autogen/EWIEGA46WW/: moc_traffic_light.cpp
exercise13-jrsavage29/: CMakeCache.txt  CMakeLists.txt  Makefile  qt_shared_deque_1  qt_shared_deque_1.cpp  qt_shared_deque_2  qt_shared_deque_2.cpp  shared_ring_buffer.h  shared_ring_buffer.tpp
exercise14-jrsavage29/: CMakeCache.txt  CMakeLists.txt  Makefile  file_header.h  read_file  read_file.cpp  write_file  write_file.cpp
exercise14-jrsavage29/write_file_autogen/: moc_predefs.h
exercise15-jrsavage29/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  test_vector  test_vector.cpp  thread_safe_vector.hpp
exercise16-jrsavage29/: raii.cpp
exercise17-jrsavage29/: CMakeCache.txt  CMakeLists.txt  Makefile  qt_concurrent  qt_concurrent.cpp
exercise17-jrsavage29/Lecture24-code/: threads_per_sec.cpp
exercise17-jrsavage29/Lecture24-code/procon_example/: CMakeLists.txt  cpp11_prodcon.cpp  cpp11_threadpool_ex1.cpp
exercise17-jrsavage29/Lecture24-code/qtthreads/: CMakeLists.txt  qt_concurrent_ex1.cpp  qt_concurrent_ex2.cpp  qt_concurrent_ex3.cpp  qthread_ex1.cpp  qthread_ex2.cpp  simple_pthread.c
exercise17-jrsavage29/qt_concurrent_autogen/: moc_predefs.h
final/problem1/: main.cpp  massconv.cpp  massconv.hpp
final/problem2/: singleton.cpp
final/problem3/: my_stack.hpp  test_my_stack.cpp
